fix border jumping

--- a/src/scss/gadjets.scss
+++ b/src/scss/gadjets.scss
@@ -46,7 +46,7 @@ $gadjetBorderActive: red;
   }
   &__type:hover,
   &__type:focus{
-  border:2px solid $gadjetBorderActive;
+  border:1px solid $gadjetBorderActive;
   }
 }
 .swiper-slide{
