--- a/src/scss/repairs.scss
+++ b/src/scss/repairs.scss
@@ -42,7 +42,7 @@ $repairsBorderActive: red;
   }
   &__brands:hover,
   &__brands:focus{
-    border:2px solid $repairsBorderActive;
+    border:1px solid $repairsBorderActive;
   }
 }
 .swiper-slide{
